Bug 472097 xul!nsMemoryImpl::IsLowMemory is broken on systems w/ lots of vm, r=bsmedberg