xpcom/base/nsMemoryImpl.cpp
@@ -183,6 +183,12 @@ nsMemoryImpl::HeapMinimize(PRBool aImmediate)
     return FlushMemory(NS_LITERAL_STRING("heap-minimize").get(), aImmediate);
 }
 
+/* this magic number is something greater than 40mb
+ * and after all, 40mb should be good enough for any web app
+ * unless it's part of an office suite.
+ */
+static const int kRequiredMemory = 0x3000000;
+
 NS_IMETHODIMP
 nsMemoryImpl::IsLowMemory(PRBool *result)
 {
@@ -191,9 +197,11 @@ nsMemoryImpl::IsLowMemory(PRBool *result)
     GlobalMemoryStatus(&stat);
     *result = ((float)stat.dwAvailPhys / stat.dwTotalPhys) < 0.1;
 #elif defined(XP_WIN)
-    MEMORYSTATUS stat;
-    GlobalMemoryStatus(&stat);
-    *result = ((float)stat.dwAvailPageFile / stat.dwTotalPageFile) < 0.1;
+    MEMORYSTATUSEX stat;
+    stat.dwLength = sizeof stat;
+    GlobalMemoryStatusEx(&stat);
+    *result = (stat.ullAvailPageFile < kRequiredMemory) &&
+        ((float)stat.ullAvailPageFile / stat.ullTotalPageFile) < 0.1;
 #elif defined(NS_OSSO)
     int fd = open (kHighMark, O_RDONLY);
     if (fd == -1) {
